# rust-shed-nano

./: .gitignore  Cargo.toml  README.md  cie_correction.py  encoder_rotations.py  serial_ports.sh
src/: cie_correction.rs  encoder.rs  fan.rs  lighting.rs  main.rs
