[package]
name = "rust-shed-nano"
version = "0.1.0"
authors = ["James <james.peter.schinner@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-shed-nano"
test = false
bench = false

[dependencies]
ruduino = "0.3.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-nano"]

[dependencies.avr-device]
version = "0.3.1"
features = ["atmega328p"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
